[package]
name = "rlviser-py"
version = "0.6.10"
edition = "2024"
description = "Python implementation that manages a UDP connection to RLViser"
license = "MIT"
repository = "https://github.com/VirxEC/rlviser-py"
readme = "README.md"
keywords = ["rlviser", "rocket-league", "udp", "python", "rlbot"]
exclude = [".github", "pytest.py", "rustfmt.toml", ".gitignore"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rlviser_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["py-clone"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
