[package]
name = "rlviser-py"
version = "0.6.13"
edition = "2024"
description = "Python implementation that manages a UDP connection to RLViser"
license = "MIT"
repository = "https://github.com/VirxEC/rlviser-py"
readme = "README.md"
keywords = ["rlviser", "rocket-league", "udp", "python", "rlbot"]
exclude = [".github", "pytest.py", "rustfmt.toml", ".gitignore"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rlviser_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.26.0"
sysinfo = { version = "0.37.0", default-features = false, features = ["system"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
