[package]
name = "rlviser-py"
version = "0.6.14"
edition = "2024"
description = "Python implementation that manages a UDP connection to RLViser"
readme = "README.md"
repository = "https://github.com/VirxEC/rlviser-py"
license = "MIT"
keywords = ["python", "rlbot", "rlviser", "rocket-league", "udp"]
exclude = [".github", ".gitignore", "pytest.py", "rustfmt.toml"]
publish = false

[lib]
crate-type = ["cdylib"]
name = "rlviser_py"

[dependencies]
planus = "1.3.0"
pyo3 = "0.28.0"
serde = { version = "1.0.195", features = ["derive"] }
sysinfo = {
  version = "0.39.0",
  default-features = false,
  features = ["system"]
}

[build-dependencies]
planus-codegen = "1.3.0"
planus-translation = "1.3.0"

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
strip = false
